[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/main/map.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/tiles/exit.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/tiles/wooden_door.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/tiles/rock.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/tiles/floor.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/tiles/brick_wall.png" type="Texture" id=6]
[ext_resource path="res://src/main/game.gd" type="Script" id=7]
[ext_resource path="res://src/main/turn_queue.gd" type="Script" id=8]
[ext_resource path="res://src/main/actor_controller.gd" type="Script" id=9]
[ext_resource path="res://src/main/actor_mover.gd" type="Script" id=10]
[ext_resource path="res://assets/player.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/actor_list.gd" type="Script" id=12]
[ext_resource path="res://assets/enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sprites/tiles/black.png" type="Texture" id=14]
[ext_resource path="res://src/main/visibility_map.gd" type="Script" id=15]
[ext_resource path="res://src/main/ui.gd" type="Script" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "brick_wall.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "wooden_door.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "exit.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "floor.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "rock.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "black.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 7 )

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="ActorController" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="ActorList" type="Node2D" parent="ActorController"]
script = ExtResource( 12 )

[node name="ActorMover" type="Node2D" parent="ActorController"]
script = ExtResource( 10 )

[node name="TurnQueue" type="Node2D" parent="ActorController"]
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="Enemy" parent="." instance=ExtResource( 13 )]

[node name="VisibilityMap" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="TileMap" type="TileMap" parent="VisibilityMap"]
z_index = 1
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="ColorRect" parent="CanvasLayer"]
margin_right = 640.0
margin_bottom = 32.0
color = Color( 0.929412, 0.0196078, 0.0196078, 1 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="CanvasLayer/UI"]
margin_left = 32.0
margin_right = 160.0
margin_bottom = 32.0
text = "Health: ERROR"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="CanvasLayer/UI"]
margin_left = 160.0
margin_right = 288.0
margin_bottom = 32.0
text = "LEVEL: ERROR"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
